Added dataset 7 and started working on cnn replication

--- a/DatasetHeatmap.ipynb
+++ b/DatasetHeatmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4  Pretty sure I'm going to live in Manitou Sprin...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -263,15 +263,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing dataset 1\n",
-      "Processing dataset 2\n",
+      "Processing dataset 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:21: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:18: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processing dataset 3\n",
       "Processing dataset 4\n",
       "Processing dataset 5\n",
@@ -280,20 +352,315 @@
     }
    ],
    "source": [
+    "mean=['retweet_count','favorite_count','followers_count', 'friends_count', 'listed_count', 'favourites_count', 'statuses_count']\n",
+    "median = ['tweet_type', 'has_description', 'bio_has_url', 'protected', 'verified','default_profile', 'default_profile_image']\n",
+    "\n",
+    "\n",
     "for i,ds in enumerate(datasets):\n",
     "    print(\"Processing dataset {}\".format(i+1))\n",
-    "    ds = pd.merge(ds, authors, on='id')\n",
+    "    ds = pd.merge(ds, authors, on='id', how='left')\n",
+    "\n",
     "    ds.drop(ds.columns.difference(['id', 'Informativeness', 'text_processed', 'author_id', 'tweet_type', 'retweet_count', 'favorite_count']), 1, inplace=True)\n",
-    "    \n",
-    "    ds =pd.merge(ds, users, on='author_id')\n",
-    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "    ds = pd.merge(ds, users, on='author_id', how='left')\n",
+    "\n",
+    "\n",
+    "    for m in mean:\n",
+    "        ds[m][ds['Informativeness'] == 1] = ds[m][ds['Informativeness'] == 1].fillna((ds[m][ds['Informativeness'] == 1].mean()))\n",
+    "        ds[m][ds['Informativeness'] == 0] = ds[m][ds['Informativeness'] == 0].fillna((ds[m][ds['Informativeness'] == 0].mean()))\n",
+    "\n",
+    "    for m in median:\n",
+    "        ds[m][ds['Informativeness'] == 1] = ds[m][ds['Informativeness'] == 1].fillna((ds[m][ds['Informativeness'] == 1].value_counts().idxmax()))\n",
+    "        ds[m][ds['Informativeness'] == 0] = ds[m][ds['Informativeness'] == 0].fillna((ds[m][ds['Informativeness'] == 0].value_counts().idxmax()))\n",
+    "\n",
     "    ds[\"has_description\"] = ds[\"has_description\"].apply(lambda x: 0 if x is np.nan else 1)\n",
     "    ds[\"tweet_type\"] = ds[\"tweet_type\"].apply(lambda x: 0 if x =='tweet' else 1)\n",
     "    ds[\"bio_has_url\"] = ds[\"bio_has_url\"].apply(lambda x: 0 if x is np.nan else 1)\n",
-    "    ds = ds.drop(columns=['id', 'author_id'])\n",
-    "    \n",
+    "#     PUT THIS BACK\n",
+    "#     ds = ds.drop(columns=['id', 'author_id'])\n",
+    "    ds = ds.drop(columns=[ 'author_id'])\n",
+    "\n",
+    "\n",
     "    datasets[i] = ds\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.to_pickle(datasets,'./temp.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets= pd.read_pickle('./temp.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context=pd.read_csv('./dataset_cleaning/tj/context_annotations.csv')\n",
+    "context =context[[\"id\",'domain_name' ,\"entity_name\"]]\n",
+    "# context.drop_duplicates(subset=['domain_name' ,\"entity_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>domain_name</th>\n",
+       "      <th>entity_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1006567036854599680</td>\n",
+       "      <td>Video Game Conference</td>\n",
+       "      <td>E3 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1006567036854599680</td>\n",
+       "      <td>Video Game Conference</td>\n",
+       "      <td>E3 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1006567069956083712</td>\n",
+       "      <td>Brand</td>\n",
+       "      <td>Nintendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1006567069956083712</td>\n",
+       "      <td>Product</td>\n",
+       "      <td>Nintendo Direct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1006567069956083712</td>\n",
+       "      <td>Video Game Conference</td>\n",
+       "      <td>E3 2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    id            domain_name      entity_name\n",
+       "0  1006567036854599680  Video Game Conference          E3 2018\n",
+       "1  1006567036854599680  Video Game Conference          E3 2018\n",
+       "2  1006567069956083712                  Brand         Nintendo\n",
+       "3  1006567069956083712                Product  Nintendo Direct\n",
+       "4  1006567069956083712  Video Game Conference          E3 2018"
+      ]
+     },
+     "execution_count": 342,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "context.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountVectorizer()"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Vevotize each sentance\n",
+    "vectorizer_entity = CountVectorizer()\n",
+    "vectorizer_entity.fit(context['entity_name'])\n",
+    "\n",
+    "vectorizer_domain = CountVectorizer()\n",
+    "vectorizer_domain.fit(context['domain_name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_entity = context.groupby(by= 'id')['entity_name'].apply(set)\n",
+    "grouped_domain = context.groupby(by= 'id')['domain_name'].apply(set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped_entity_vectorized = grouped_entity.apply(lambda x: vectorizer_entity.transform(x).toarray().sum(axis=0))\n",
+    "grouped_domain_vectorized = grouped_domain.apply(lambda x: vectorizer_domain.transform(x).toarray().sum(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing dataset: 1\n",
+      "(18159, 1)\n",
+      "Processing dataset: 2\n",
+      "(15745, 54)\n",
+      "Processing dataset: 3\n",
+      "(2522, 54)\n",
+      "Processing dataset: 4\n",
+      "(7929, 54)\n",
+      "Processing dataset: 5\n",
+      "(826, 1)\n",
+      "Processing dataset: 6\n",
+      "(20101, 54)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, ds in enumerate(datasets):\n",
+    "\n",
+    "    print(\"Processing dataset: {}\".format(i+1))\n",
+    "    ds = pd.merge(ds, grouped_domain_vectorized, on='id', how='left')\n",
+    "    tostack_domain =ds['domain_name'].apply(pd.Series)\n",
+    "    tostack_domain = tostack_domain.fillna(0)\n",
+    "    ds = pd.concat([ds, tostack_domain], axis=1)\n",
+    "    ds = pd.concat([ds,pd.DataFrame(np.zeros((tostack_domain.shape[0],len(vectorizer_domain.vocabulary_)-tostack_domain.shape[1])))], axis=1)\n",
+    "    \n",
+    "    ds = pd.merge(ds, grouped_entity_vectorized, on='id', how='left')\n",
+    "    tostack_entity =ds['entity_name'].apply(pd.Series)\n",
+    "    tostack_entity = tostack_entity.fillna(0)\n",
+    "    ds = pd.concat([ds, tostack_entity], axis=1)\n",
+    "    ds = pd.concat([ds,pd.DataFrame(np.zeros((tostack_entity.shape[0],len(vectorizer_entity.vocabulary_)-tostack_entity.shape[1])))], axis=1)\n",
+    "    \n",
+    "    \n",
+    "    ds.drop(columns=['domain_name', 'entity_name'], inplace=True)\n",
+    "    datasets[i] = ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(18159, 2712)\n",
+      "(15745, 2712)\n",
+      "(2522, 2712)\n",
+      "(7929, 2712)\n",
+      "(826, 2712)\n",
+      "(20101, 2712)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ds in datasets:\n",
+    "    print(ds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset 1, crisislex:\n",
+      "Size when keeping only english tweets: 18159, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 18159, \n",
+      "Size of dataset for which we also have context annotation: 0\n",
+      " \n",
+      "Dataset 2, crisisnlp_crisismmd:\n",
+      "Size when keeping only english tweets: 15745, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 12417, \n",
+      "Size of dataset for which we also have context annotation: 1529\n",
+      " \n",
+      "Dataset 3, news_notNews:\n",
+      "Size when keeping only english tweets: 2522, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 2486, \n",
+      "Size of dataset for which we also have context annotation: 301\n",
+      " \n",
+      "Dataset 4, Covid_WNUT:\n",
+      "Size when keeping only english tweets: 7929, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 6955, \n",
+      "Size of dataset for which we also have context annotation: 3103\n",
+      " \n",
+      "Dataset 5, crisisnlp_Sandy_Japolin:\n",
+      "Size when keeping only english tweets: 826, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 49, \n",
+      "Size of dataset for which we also have context annotation: 0\n",
+      " \n",
+      "Dataset 6, crisisnlp_19Crisis:\n",
+      "Size when keeping only english tweets: 20101, \n",
+      "Size when keeping only tweets for which we have additional features on the users/tweets: 12919, \n",
+      "Size of dataset for which we also have context annotation: 121\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, filename in enumerate(all_files):\n",
+    "    print(\"Dataset {}, {}:\".format(i+1, dataset_names[i]))\n",
+    "    print(\"Size when keeping only english tweets: {}, \\nSize when keeping only tweets for which we have additional features on the users/tweets: {}, \\nSize of dataset for which we also have context annotation: {}\\n \".format(len(pd.read_pickle(filename)), len(datasets[i]), len(pd.merge(datasets[i], context, on='id').drop_duplicates(subset=['id']))))"
    ]
   },
   {
@@ -302,22 +669,42 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['Informativeness', 'text_processed', 'tweet_type', 'retweet_count',\n",
-       "       'favorite_count', 'has_description', 'bio_has_url', 'followers_count',\n",
-       "       'friends_count', 'favourites_count', 'listed_count', 'statuses_count',\n",
-       "       'protected', 'verified', 'default_profile', 'default_profile_image'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18159 0\n",
+      "12417 4198\n",
+      "2486 895\n",
+      "6955 7227\n",
+      "49 0\n",
+      "12919 256\n"
+     ]
     }
    ],
    "source": [
-    "datasets[0].columns"
+    "for i in datasets:\n",
+    "    \n",
+    "    print(len(i), len(pd.merge(i, context, on='id')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4198\n",
+      "1529\n"
+     ]
+    }
+   ],
+   "source": [
+    "testdwe= pd.merge(datasets[1], context, on='id')\n",
+    "print(len(testdwe))\n",
+    "print(len(testdwe.drop_duplicates(subset=['id'])))"
    ]
   },
   {
