--- a/dataset_cleaning/Dataset 6/load_clean_dataset_6.ipynb
+++ b/dataset_cleaning/Dataset 6/load_clean_dataset_6.ipynb
@@ -318,22 +318,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df =pd.read_pickle(\"./../dataset6Cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'frame' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-3c4db004bd82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mframe\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mis_english\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'frame' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, -3)]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "from sentistrength import PySentiStr\n",
+    "senti = PySentiStr()\n",
+    "senti.setSentiStrengthPath('/Users/gerald/Workspaces/MA3/Semester Project/sula_master/SentiStrenght_files/SentiStrength.jar') # Note: Provide absolute path instead of relative path\n",
+    "senti.setSentiStrengthLanguageFolderPath('/Users/gerald/Workspaces/MA3/Semester Project/sula_master/SentiStrenght_files/SentStrength_Data_Sept2011/')\n",
+    "result = senti.getSentiment('stupid idiot', score='dual')\n",
+    "print(result)\n",
+    "\n",
+    "def get_sentiment_score(x):\n",
+    "    result = senti.getSentiment(x[\"text\"], score='dual')[0]\n",
+    "    x[\"positive_score\"]=result[0]\n",
+    "    x[\"negative_score\"]=result[1]\n",
+    "    x[\"emotional_devergence_score\"]=(result[0]-result[1])/10.0\n",
+    "    \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/tqdm/std.py:703: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  from pandas import Panel\n",
+      "100%|██████████| 20101/20101 [7:54:22<00:00,  1.42s/it]       \n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "main_df = main_df.progress_apply(get_sentiment_score, axis=1)\n",
+    "main_df.to_pickle(\"./../dataset6Cleaned.pkl\")"
+   ]
   },
   {
    "cell_type": "code",
