added cnn heatmap

--- a/dataset_cleaning/Dataset 7/load_clean_dataset_7.ipynb
+++ b/dataset_cleaning/Dataset 7/load_clean_dataset_7.ipynb
@@ -710,6 +710,81 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df=pd.read_pickle(\"./../dataset7Cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, -3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentistrength import PySentiStr\n",
+    "senti = PySentiStr()\n",
+    "senti.setSentiStrengthPath('/Users/gerald/Workspaces/MA3/Semester Project/sula_master/SentiStrenght_files/SentiStrength.jar') # Note: Provide absolute path instead of relative path\n",
+    "senti.setSentiStrengthLanguageFolderPath('/Users/gerald/Workspaces/MA3/Semester Project/sula_master/SentiStrenght_files/SentStrength_Data_Sept2011/')\n",
+    "result = senti.getSentiment('stupid idiot', score='dual')\n",
+    "print(result)\n",
+    "\n",
+    "def get_sentiment_score(x):\n",
+    "    result = senti.getSentiment(x[\"text\"], score='dual')[0]\n",
+    "    x[\"positive_score\"]=result[0]\n",
+    "    x[\"negative_score\"]=result[1]\n",
+    "    x[\"emotional_devergence_score\"]=(result[0]-result[1])/10.0\n",
+    "    \n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/tqdm/std.py:703: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  from pandas import Panel\n",
+      "100%|██████████| 194/194 [01:02<00:00,  3.11it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "tqdm.pandas()\n",
+    "main_df = main_df.progress_apply(get_sentiment_score, axis=1)\n",
+    "main_df.to_pickle(\"./../dataset7Cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
