Update work done after presantation

--- a/dataset_cleaning/Dataset 1/load_clean_dataset1.ipynb
+++ b/dataset_cleaning/Dataset 1/load_clean_dataset1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,6 +1202,316 @@
    "outputs": [],
    "source": [
     "main_df.to_pickle(\"./../dataset1Cleaned.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_df= pd.read_pickle('./../dataset1Cleaned.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple - 0 - 5 - ORG - Companies, agencies, institutions, etc.\n",
+      "U.K. - 27 - 31 - GPE - Countries, cities, states\n",
+      "$1 billion - 44 - 54 - MONEY - Monetary values, including unit\n",
+      "Apple - 68 - 73 - ORG - Companies, agencies, institutions, etc.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform standard imports \n",
+    "import spacy \n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "# Write a function to display basic entity info: \n",
+    "def show_ents(doc): \n",
+    "    if doc.ents: \n",
+    "        for ent in doc.ents: \n",
+    "\n",
+    "            print(ent.text+' - ' +str(ent.start_char) +' - '+ str(ent.end_char) +' - '+ent.label_+ ' - '+str(spacy.explain(ent.label_))) \n",
+    "    else: print('No named entities found.')\n",
+    "doc1 = nlp(\"Apple is looking at buying U.K. startup for $1 billion in stocks at Apple\") \n",
+    "show_ents(doc1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple Apple PROPN NNP nsubj Xxxxx True False\n",
+      "is be AUX VBZ aux xx True True\n",
+      "looking look VERB VBG ROOT xxxx True False\n",
+      "at at ADP IN prep xx True True\n",
+      "buying buy VERB VBG pcomp xxxx True False\n",
+      "U.K. U.K. PROPN NNP compound X.X. False False\n",
+      "startup startup NOUN NN dobj xxxx True False\n",
+      "for for ADP IN prep xxx True True\n",
+      "$ $ SYM $ quantmod $ False False\n",
+      "1 1 NUM CD compound d False False\n",
+      "billion billion NUM CD pobj xxxx True False\n",
+      "in in ADP IN prep xx True True\n",
+      "stocks stock NOUN NNS pobj xxxx True False\n",
+      "at at ADP IN prep xx True True\n",
+      "Apple Apple PROPN NNP pobj Xxxxx True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc1:\n",
+    "    print(token.text, token.lemma_, token.pos_, token.tag_, token.dep_,\n",
+    "            token.shape_, token.is_alpha, token.is_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#Intern #US #TATTOO #Wisconsin #Ohio #NC #PA #Florida #Colorado #Iowa #Nevada #Virginia #NV #mlb\\nTravel Destinations---&gt;http://t.co/TIHBJKF2'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_df.iloc[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n",
+      "<class 'spacy.tokens.span.Span'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_ents(nlp(sentence_clean))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sent in nltk.sent_tokenize(main_df.iloc[0].text.lower()[:-25]):\n",
+    "   for chunk in nltk.ne_chunk(nltk.pos_tag(nltk.word_tokenize(sent))):\n",
+    "      if hasattr(chunk, 'label'):\n",
+    "         print(chunk.label(), ' '.join(c[0] for c in chunk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#intern #us #tattoo #wisconsin #ohio #nc #pa #florida #colorado #iowa #nevada #virginia #nv #mlb\\ntravel destinations--'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_df.iloc[0].text.lower()[:-25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('intern', 'JJ')\n",
+      "('us', 'PRP')\n",
+      "('tattoo', 'VBP')\n",
+      "('wisconsin', 'JJ')\n",
+      "('ohio', 'NN')\n",
+      "('nc', 'NN')\n",
+      "('pa', 'NN')\n",
+      "('florida', 'NN')\n",
+      "('colorado', 'NN')\n",
+      "('iowa', 'NN')\n",
+      "('nevada', 'FW')\n",
+      "('virginia', 'NN')\n",
+      "('nv', 'FW')\n",
+      "('mlb', 'FW')\n",
+      "('travel', 'NN')\n",
+      "('destinations', 'NNS')\n",
+      "('gt', 'VBP')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sent in nltk.sent_tokenize(sentence_clean):\n",
+    "   for chunk in nltk.ne_chunk(nltk.pos_tag(nltk.word_tokenize(sent))):\n",
+    "        print( chunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package words to /Users/gerald/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/words.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('words')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from textblob import TextBlob\n",
+    "import glob\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "def text_processing(tweet):\n",
+    "    \n",
+    "    tweet= tweet.lower()\n",
+    "    \n",
+    "    #Removing hyperlinks from the tweet\n",
+    "    tweet_no_links=re.sub(r'http\\S+', '', tweet)\n",
+    "    \n",
+    "    #Generating the list of words in the tweet (hashtags and other punctuations removed)\n",
+    "    def form_sentence(tweet):\n",
+    "        tweet_blob = TextBlob(tweet)\n",
+    "        return ' '.join(tweet_blob.words)\n",
+    "    new_tweet = form_sentence(tweet_no_links)\n",
+    "    \n",
+    "    #Removing stopwords and words with unusual symbols\n",
+    "    def no_user_alpha(tweet):\n",
+    "        tweet_list = [ele for ele in tweet.split() if ele != 'user']\n",
+    "        clean_tokens = [t for t in tweet_list if re.match(r'[^\\W\\d]*$', t)]\n",
+    "        clean_s = ' '.join(clean_tokens)\n",
+    "        clean_mess = [word for word in clean_s.split() if word not in stopwords.words('english')]\n",
+    "        return clean_mess\n",
+    "    no_punc_tweet = no_user_alpha(new_tweet)\n",
+    "    \n",
+    "    #Normalizing the words in tweets \n",
+    "    def normalization(tweet_list):\n",
+    "        lem = WordNetLemmatizer()\n",
+    "        normalized_tweet = []\n",
+    "        for word in tweet_list:\n",
+    "            normalized_text = lem.lemmatize(word,'v')\n",
+    "            normalized_tweet.append(normalized_text)\n",
+    "        return \" \".join(normalized_tweet)\n",
+    "    \n",
+    "    \n",
+    "    return normalization(no_punc_tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_clean=text_processing(main_df.iloc[0].text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'intern us tattoo wisconsin ohio nc pa florida colorado iowa nevada virginia nv mlb travel destinations gt'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence_clean"
    ]
   },
   {
