--- a/dataset_cleaning/Dataset 7/load_clean_dataset_7.ipynb
+++ b/dataset_cleaning/Dataset 7/load_clean_dataset_7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,16 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_df=pd.read_csv('./karabakh_tweet_text_shuffled_annotated_200.csv')"
+    "main_df=pd.read_csv('./karabakh_tweet_text_shuffled_500.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "4                1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "str"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,72 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This row throws and error: nan\n",
-      "This row throws and error: https://t.co/ZfYx74jVuY\n",
-      "This row throws and error: 𝗕𝗿𝗲𝗮𝗸𝗶𝗻𝗴⚠️  𝗔𝘀 𝗮 𝗿𝗲𝘀𝘂𝗹𝘁 𝗼𝗳 𝗵𝘂𝗺𝗮𝗻𝗶𝘁𝗮𝗿𝗶𝗮𝗻 𝗰𝗲𝗮𝘀𝗲𝗳𝗶𝗿𝗲 𝘃𝗶𝗼𝗹𝗮𝘁𝗶𝗼𝗻 𝗯𝘆 𝗔𝗿𝗺𝗲𝗻𝗶𝗮 𝟰𝟲 𝘆𝗲𝗮𝗿 𝗼𝗹𝗱 𝗚𝘂𝗻𝗱𝘂𝘇 𝗛𝘂𝘀𝗲𝘆𝗻𝗼𝘃 𝗱𝗶𝗲𝗱 𝗳𝗿𝗼𝗺 𝗿𝗼𝗰𝗸𝗲𝘁 𝗹𝗮𝘂𝗻𝗰𝗵. #KarabakhisAzerbajian https://t.co/7F32EjE29F\n",
-      "This row throws and error: https://t.co/J0XnQ5ecCQ https://t.co/rL40Y6Yu7d\n",
-      "This row throws and error: https://t.co/Lvf2owHGIP\n",
-      "This row throws and error: https://t.co/bnndIziCAb\n",
-      "This row throws and error: https://t.co/1nQOCesyFK\n",
-      "This row throws and error: https://t.co/vGzee8zski\n",
-      "This row throws and error: https://t.co/dksVddK1tO\n",
-      "This row throws and error: https://t.co/WkZ7rjlCDh\n",
-      "This row throws and error: nan\n",
-      "This row throws and error: nan\n",
-      "This row throws and error: 🤭🤭😆😆 https://t.co/wx1dIf1isF\n",
-      "This row throws and error: 7817715407\n",
-      "This row throws and error: https://t.co/b3ejeBjhdp\n",
-      "This row throws and error: https://t.co/8DgCjsEM7k\n",
-      "This row throws and error: https://t.co/wNutNeYimZ\n",
-      "This row throws and error: https://t.co/WQNDj1DVbX\n",
-      "This row throws and error: https://t.co/GbwDp0TcJf\n",
-      "This row throws and error: https://t.co/K7Dt3pMWNX\n",
-      "This row throws and error: nan\n",
-      "This row throws and error: https://t.co/TxjnVWKYlu https://t.co/rHzrZIfPnG\n",
-      "This row throws and error: https://t.co/XDWtESafA4\n",
-      "This row throws and error: https://t.co/ns9UUfix9y\n",
-      "This row throws and error: 7274922893\n",
-      "This row throws and error: https://t.co/st4G1hFnxr\n",
-      "This row throws and error: @Pres_Artsakh We’re coming back to liberate our motherland from armenian terrorists. Karabakh is Azerbaijan.🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿🇦🇿\n",
-      "This row throws and error: https://t.co/w9NxzVKJNS\n",
-      "This row throws and error: 4153172323\n",
-      "This row throws and error: https://t.co/geco24VEqx\n",
-      "This row throws and error: https://t.co/yOmprFlF9c\n",
-      "This row throws and error: 😢😢 https://t.co/5lTL3JPYBm\n",
-      "This row throws and error: https://t.co/w714zvDJel\n",
-      "This row throws and error: https://t.co/Y1mdVTwaV0\n",
-      "This row throws and error: https://t.co/wRXor9WVUw\n",
-      "This row throws and error: @NikolPashinyan ARTSAKH  has been, is, and always will be for Armenians🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻💪🏻🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲🇦🇲\n",
-      "This row throws and error: 👇 https://t.co/4Bkvk3QtrM https://t.co/LKZbzdnUKt\n",
-      "This row throws and error: https://t.co/dBFnTvmbhj\n",
-      "This row throws and error: https://t.co/UjcxDOASID https://t.co/eO44DnMmSy\n",
-      "This row throws and error: https://t.co/APJ3LVFIEi\n",
-      "This row throws and error: (2/3) https://t.co/bzrJQ2iskR https://t.co/FT4Oftm8My\n",
-      "This row throws and error: Մեկ է #ՀԱՂԹԵԼՈւԵՆՔ\n",
-      "This row throws and error: @Robbie_gr @presidentaz I'm sorry are you from this planet ?  You know BTS  from North Korea ? OMG 🤦🏻‍♀️🤦🏻‍♀️ that's why you are calling Artsakh yours you don't know anything 🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏻‍♀️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️🤦🏽‍♂️\n",
-      "This row throws and error: https://t.co/zWgmy1T6Qd\n",
-      "This row throws and error: https://t.co/aNlfpXyxb3 https://t.co/AfsDk22iqe\n",
-      "This row throws and error: https://t.co/TtrxXCtcGk\n",
-      "This row throws and error: 😒 https://t.co/E2Gxf3kHp6\n",
-      "This row throws and error: https://t.co/LntEtftBsV\n",
-      "This row throws and error: https://t.co/3IEWBrCn9R\n",
-      "This row throws and error: 💥🇦🇿 https://t.co/f0rNGWnfbG\n",
-      "This row throws and error: https://t.co/g3CfqfnRHC https://t.co/oxNqt98Vx9\n",
-      "This row throws and error: https://t.co/zeXTP5oFCg\n",
-      "This row throws and error: https://t.co/tEAPopYZt3\n",
-      "This row throws and error: https://t.co/wxokH56hiT\n",
-      "This row throws and error: https://t.co/nbEv5Hxhbd\n",
-      "This row throws and error: https://t.co/px0MrcboU2\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "main_df=main_df[:500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "### Keep only english tweets\n",
     "\n",
@@ -688,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_df_annotated = main_df[:194]"
+    "main_df_annotated = main_df[:500]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -759,16 +705,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/tqdm/std.py:703: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/tqdm/std.py:701: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
       "  from pandas import Panel\n",
-      "100%|██████████| 194/194 [01:02<00:00,  3.11it/s]\n"
+      "100%|██████████| 489/489 [03:21<00:00,  2.43it/s]\n"
      ]
     }
    ],
@@ -784,7 +730,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "main_df.head()"
+   ]
   }
  ],
  "metadata": {
