prepare for public repo

--- a/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
+++ b/dataset_cleaning/Dataset 3/load_clean_dataset_3.ipynb
@@ -113,10 +113,10 @@
    ],
    "source": [
     "# Authenticate to Twitter\n",
-    "auth = tweepy.OAuthHandler(\"ZbcylrnqHEgkBqwKaiTYgYNL0\",\n",
-    "    \"EpBfljAfXaG4V9isnXLRQWk1fAL8pZ5iZnyKX4yfUxHmeFuErQ\")\n",
-    "auth.set_access_token(\"1276163142087827460-mYhybK15AhqqKOzTUM4xBGMT8mNOqN\",\n",
-    "    \"vku1KbNkhQmSVUQPrVj6ReMhnLTsJlsNuJRwyg6DgZAFH\")\n",
+    "auth = tweepy.OAuthHandler(\"###\",\n",
+    "    \"###\")\n",
+    "auth.set_access_token(\"#-#\",\n",
+    "    \"###\")\n",
     "\n",
     "api = tweepy.API(auth,wait_on_rate_limit=True,\n",
     "    wait_on_rate_limit_notify=True)\n",
